Skip to content

[oss-fuzz 5829271106158592] Stack-overflow in ClearCSSStyles

Ref.:

INFO: Running with entropic power schedule (0xFF, 100).

INFO: Seed: 2129565751
INFO: Loaded 1 modules   (74535 inline 8-bit counters): 74535 [0x57510d826b28, 0x57510d838e4f),
INFO: Loaded 1 PC tables (74535 PCs): 74535 [0x57510d838e50,0x57510d95c0c0),
/mnt/scratch0/clusterfuzz/bot/builds/clusterfuzz-builds_vlc_8f98ce4aa4498db36bdafd2ab37989a4592ed90c/revisions/vlc-demux-dec-libfuzzer-webvtt: Running 1 inputs 100 time(s) each.
Running: /mnt/scratch0/clusterfuzz/bot/inputs/fuzzer-testcases/crash-eaa235f8871f81dfb31ebe878dcfde31c4d4f04c
AddressSanitizer:DEADLYSIGNAL
=================================================================
==402==ERROR: AddressSanitizer: stack-overflow on address 0x7fff27b4eff8 (pc 0x57510d0c0f08 bp 0x7fff27b4f010 sp 0x7fff27b4f000 T0)
    #0 0x57510d0c0f08 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1738
    #1 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #2 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #3 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #4 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #5 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #6 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #7 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #8 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #9 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
    #10 0x57510d0c1097 in ClearCSSStyles /src/vlc/modules/codec/webvtt/subsvtt.c:1743:9
...

Samples:

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information