codec: webvtt: replace recursive css cleanup

refs #29392